[project]
name = "mcp-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-mcp-adapters>=0.0.10",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "langgraph-prebuilt>=0.1.8",
    "mcp>=1.7.1",
    "openai>=1.77.0",
    "python-dotenv>=1.1.0",
]
